refactor: Rename application to The Coffee Route
Update the application name from "ROUTE UP - Run Social & Track" to "The Coffee Route" across all relevant files, including package.json, HTML titles, metadata, AI service prompts, component display, and README documentation. This change reflects the project's rebranding.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "route-up---run-social-&-track",
+  "name": "the-coffee-route",
   "private": true,
   "version": "0.0.0",
   "type": "module",
